编译原理实验/CS1804_U201814755_彭子晨/lab3/parser.output
Terminals unused in grammar

   CONST
   STRUCT_DECL
   STRUCT_CREATE
   STRUCT_VISIT
   DECL_LIST
   VAR_DECL
   FUNC_DECL
   FUNC_DEF
   EXT_DEC_LIST
   ARRAY_LIST
   PARA_LIST
   PARA_DECL
   STMT_LIST
   COMP_STMT
   DEF
   DEF_LIST
   DEC
   DEC_LIST
   EXP_STMT
   IF_THEN
   IF_ELSE
   FOR_DECL
   FOR_EXP1
   FOR_EXP2
   FOR_EXP3
   FUNC_CALL
   ARGS
   CASE_STMT
   CASE_STMT_LIST
   DEFAULT_STMT


State 39 conflicts: 3 shift/reduce
State 56 conflicts: 3 shift/reduce
State 63 conflicts: 3 shift/reduce
State 64 conflicts: 3 shift/reduce
State 65 conflicts: 3 shift/reduce
State 66 conflicts: 3 shift/reduce
State 67 conflicts: 3 shift/reduce
State 68 conflicts: 3 shift/reduce
State 71 conflicts: 3 shift/reduce
State 73 conflicts: 3 shift/reduce
State 78 conflicts: 4 shift/reduce
State 83 conflicts: 3 shift/reduce
State 84 conflicts: 3 shift/reduce
State 85 conflicts: 3 shift/reduce
State 96 conflicts: 3 shift/reduce
State 98 conflicts: 3 shift/reduce
State 99 conflicts: 3 shift/reduce
State 100 conflicts: 3 shift/reduce
State 101 conflicts: 3 shift/reduce
State 102 conflicts: 3 shift/reduce
State 103 conflicts: 3 shift/reduce
State 104 conflicts: 3 shift/reduce
State 105 conflicts: 3 shift/reduce
State 117 conflicts: 4 shift/reduce
State 123 conflicts: 3 shift/reduce
State 136 conflicts: 3 shift/reduce
State 138 conflicts: 3 shift/reduce
State 139 conflicts: 3 shift/reduce, 1 reduce/reduce
State 143 conflicts: 3 shift/reduce
State 144 conflicts: 4 shift/reduce
State 151 conflicts: 3 shift/reduce, 1 reduce/reduce
State 153 conflicts: 3 shift/reduce, 1 reduce/reduce
State 155 conflicts: 3 shift/reduce
State 161 conflicts: 3 shift/reduce
State 164 conflicts: 3 shift/reduce, 1 reduce/reduce
State 168 conflicts: 3 shift/reduce
State 173 conflicts: 3 shift/reduce
State 174 conflicts: 3 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: DeclList

    2 DeclList: /* empty */
    3         | Decl DeclList

    4 Decl: Specifier ExtDecList SEMI
    5     | Specifier FuncDecl CompStmt
    6     | StructDecl SEMI
    7     | error SEMI

    8 Specifier: TYPE

    9 ExtDecList: VarDecl
   10           | VarDecl COMMA ExtDecList

   11 VarDecl: ID
   12        | ID ArrayList

   13 ArrayList: LM INT RM
   14          | LM INT RM ArrayList

   15 FuncDecl: ID LS VarList RS
   16         | ID LS RS

   17 VarList: ParaDecl
   18        | ParaDecl COMMA VarList

   19 ParaDecl: Specifier VarDecl

   20 CompStmt: LL DefList StmtList RL

   21 DefList: /* empty */
   22        | Def DefList
   23        | error SEMI

   24 Def: Specifier DecList SEMI
   25    | StructDecl SEMI

   26 DecList: Dec
   27        | Dec COMMA DecList

   28 Dec: VarDecl
   29    | VarDecl ASSIGNOP Exp

   30 StmtList: /* empty */
   31         | Stmt StmtList

   32 Stmt: Exp SEMI
   33     | CompStmt
   34     | RETURN Exp SEMI
   35     | IF LS Exp RS Stmt
   36     | IF LS Exp RS Stmt ELSE Stmt
   37     | WHILE LS Exp RS Stmt
   38     | FOR LS ForDecl RS Stmt
   39     | CONTINUE SEMI
   40     | BREAK SEMI
   41     | SWITCH LS Exp RS LL CaseStmtList RL

   42 CaseStmt: CASE INT COLON StmtList
   43         | CASE CHAR COLON StmtList

   44 DefaultStmt: DEFAULT COLON StmtList

   45 CaseStmtList: /* empty */
   46             | CaseStmt CaseStmtList
   47             | DefaultStmt

   48 ForDecl: ForExp1 SEMI ForExp2 SEMI ForExp3
   49        | ForExp1 SEMI SEMI ForExp3
   50        | ForExp1 SEMI ForExp2 SEMI
   51        | SEMI ForExp2 SEMI ForExp3
   52        | ForExp1 SEMI SEMI
   53        | SEMI ForExp2 SEMI
   54        | SEMI SEMI ForExp3
   55        | SEMI SEMI

   56 ForExp1: DecList
   57        | Specifier DecList

   58 ForExp2: Exp

   59 ForExp3: Exp COMMA ForExp3
   60        | Exp

   61 Exp: /* empty */
   62    | Exp ASSIGNOP Exp
   63    | Exp AND Exp
   64    | Exp OR Exp
   65    | Exp ADD Exp
   66    | Exp SUB Exp
   67    | Exp MUL Exp
   68    | Exp DIV Exp
   69    | Exp MOD Exp
   70    | Exp RELOP Exp
   71    | SELFADD Exp
   72    | SELFSUB Exp
   73    | Exp SELFADD
   74    | Exp SELFSUB
   75    | LS Exp RS
   76    | SUB Exp
   77    | NOT Exp
   78    | ID LS Args RS
   79    | ID LS RS
   80    | ID
   81    | INT
   82    | CHAR
   83    | FLOAT
   84    | STRING
   85    | LM Args RM
   86    | ID ArrayList
   87    | Exp DOT ID

   88 Args: Exp COMMA Args
   89     | Exp

   90 StructDecl: STRUCT StructName LL DefList RL

   91 StructName: /* empty */
   92           | ID


Terminals, with rules where they appear

$end (0) 0
error (256) 7 23
CHAR (258) 43 82
INT (259) 13 14 42 81
FLOAT (260) 83
ID (261) 11 12 15 16 78 79 80 86 87 92
TYPE (262) 8
STRING (263) 84
RELOP (264) 70
CONST (265)
RETURN (266) 34
BREAK (267) 40
CONTINUE (268) 39
IF (269) 35 36
ELSE (270) 36
CASE (271) 42 43
SWITCH (272) 41
DEFAULT (273) 44
STRUCT_DECL (274)
STRUCT (275) 90
STRUCT_CREATE (276)
STRUCT_VISIT (277)
DECL_LIST (278)
VAR_DECL (279)
FUNC_DECL (280)
FUNC_DEF (281)
EXT_DEC_LIST (282)
ARRAY_LIST (283)
PARA_LIST (284)
PARA_DECL (285)
STMT_LIST (286)
COMP_STMT (287)
DEF (288)
DEF_LIST (289)
DEC (290)
DEC_LIST (291)
EXP_STMT (292)
WHILE (293) 37
FOR (294) 38
IF_THEN (295)
IF_ELSE (296)
FOR_DECL (297)
FOR_EXP1 (298)
FOR_EXP2 (299)
FOR_EXP3 (300)
FUNC_CALL (301)
ARGS (302)
CASE_STMT (303)
CASE_STMT_LIST (304)
DEFAULT_STMT (305)
COLON (306) 42 43 44
COMMA (307) 10 18 27 59 88
SEMI (308) 4 6 7 23 24 25 32 34 39 40 48 49 50 51 52 53 54 55
LS (309) 15 16 35 36 37 38 41 75 78 79
RS (310) 15 16 35 36 37 38 41 75 78 79
LM (311) 13 14 85
RM (312) 13 14 85
LL (313) 20 41 90
RL (314) 20 41 90
ASSIGNOP (315) 29 62
ADD (316) 65
SUB (317) 66 76
MUL (318) 67
DIV (319) 68
MOD (320) 69
OR (321) 64
AND (322) 63
NOT (323) 77
DOT (324) 87
SELFADD (325) 71 73
SELFSUB (326) 72 74
UMINUS (327)
LOWER_THEN_ELSE (328)


Nonterminals, with rules where they appear

$accept (74)
    on left: 0
Program (75)
    on left: 1, on right: 0
DeclList (76)
    on left: 2 3, on right: 1 3
Decl (77)
    on left: 4 5 6 7, on right: 3
Specifier (78)
    on left: 8, on right: 4 5 19 24 57
ExtDecList (79)
    on left: 9 10, on right: 4 10
VarDecl (80)
    on left: 11 12, on right: 9 10 19 28 29
ArrayList (81)
    on left: 13 14, on right: 12 14 86
FuncDecl (82)
    on left: 15 16, on right: 5
VarList (83)
    on left: 17 18, on right: 15 18
ParaDecl (84)
    on left: 19, on right: 17 18
CompStmt (85)
    on left: 20, on right: 5 33
DefList (86)
    on left: 21 22 23, on right: 20 22 90
Def (87)
    on left: 24 25, on right: 22
DecList (88)
    on left: 26 27, on right: 24 27 56 57
Dec (89)
    on left: 28 29, on right: 26 27
StmtList (90)
    on left: 30 31, on right: 20 31 42 43 44
Stmt (91)
    on left: 32 33 34 35 36 37 38 39 40 41, on right: 31 35 36 37 38
CaseStmt (92)
    on left: 42 43, on right: 46
DefaultStmt (93)
    on left: 44, on right: 47
CaseStmtList (94)
    on left: 45 46 47, on right: 41 46
ForDecl (95)
    on left: 48 49 50 51 52 53 54 55, on right: 38
ForExp1 (96)
    on left: 56 57, on right: 48 49 50 52
ForExp2 (97)
    on left: 58, on right: 48 50 51 53
ForExp3 (98)
    on left: 59 60, on right: 48 49 51 54 59
Exp (99)
    on left: 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78
    79 80 81 82 83 84 85 86 87, on right: 29 32 34 35 36 37 41 58 59
    60 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 87 88 89
Args (100)
    on left: 88 89, on right: 78 85 88
StructDecl (101)
    on left: 90, on right: 6 25
StructName (102)
    on left: 91 92, on right: 90


state 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 2 (DeclList)

    Program     go to state 4
    DeclList    go to state 5
    Decl        go to state 6
    Specifier   go to state 7
    StructDecl  go to state 8


state 1

    7 Decl: error . SEMI

    SEMI  shift, and go to state 9


state 2

    8 Specifier: TYPE .

    $default  reduce using rule 8 (Specifier)


state 3

   90 StructDecl: STRUCT . StructName LL DefList RL

    ID  shift, and go to state 10

    $default  reduce using rule 91 (StructName)

    StructName  go to state 11


state 4

    0 $accept: Program . $end

    $end  shift, and go to state 12


state 5

    1 Program: DeclList .

    $default  reduce using rule 1 (Program)


state 6

    3 DeclList: Decl . DeclList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 2 (DeclList)

    DeclList    go to state 13
    Decl        go to state 6
    Specifier   go to state 7
    StructDecl  go to state 8


state 7

    4 Decl: Specifier . ExtDecList SEMI
    5     | Specifier . FuncDecl CompStmt

    ID  shift, and go to state 14

    ExtDecList  go to state 15
    VarDecl     go to state 16
    FuncDecl    go to state 17


state 8

    6 Decl: StructDecl . SEMI

    SEMI  shift, and go to state 18


state 9

    7 Decl: error SEMI .

    $default  reduce using rule 7 (Decl)


state 10

   92 StructName: ID .

    $default  reduce using rule 92 (StructName)


state 11

   90 StructDecl: STRUCT StructName . LL DefList RL

    LL  shift, and go to state 19


state 12

    0 $accept: Program $end .

    $default  accept


state 13

    3 DeclList: Decl DeclList .

    $default  reduce using rule 3 (DeclList)


state 14

   11 VarDecl: ID .
   12        | ID . ArrayList
   15 FuncDecl: ID . LS VarList RS
   16         | ID . LS RS

    LS  shift, and go to state 20
    LM  shift, and go to state 21

    $default  reduce using rule 11 (VarDecl)

    ArrayList  go to state 22


state 15

    4 Decl: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 23


state 16

    9 ExtDecList: VarDecl .
   10           | VarDecl . COMMA ExtDecList

    COMMA  shift, and go to state 24

    $default  reduce using rule 9 (ExtDecList)


state 17

    5 Decl: Specifier FuncDecl . CompStmt

    LL  shift, and go to state 25

    CompStmt  go to state 26


state 18

    6 Decl: StructDecl SEMI .

    $default  reduce using rule 6 (Decl)


state 19

   90 StructDecl: STRUCT StructName LL . DefList RL

    error   shift, and go to state 27
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RL  reduce using rule 21 (DefList)

    Specifier   go to state 28
    DefList     go to state 29
    Def         go to state 30
    StructDecl  go to state 31


state 20

   15 FuncDecl: ID LS . VarList RS
   16         | ID LS . RS

    TYPE  shift, and go to state 2
    RS    shift, and go to state 32

    Specifier  go to state 33
    VarList    go to state 34
    ParaDecl   go to state 35


state 21

   13 ArrayList: LM . INT RM
   14          | LM . INT RM ArrayList

    INT  shift, and go to state 36


state 22

   12 VarDecl: ID ArrayList .

    $default  reduce using rule 12 (VarDecl)


state 23

    4 Decl: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (Decl)


state 24

   10 ExtDecList: VarDecl COMMA . ExtDecList

    ID  shift, and go to state 37

    ExtDecList  go to state 38
    VarDecl     go to state 16


state 25

   20 CompStmt: LL . DefList StmtList RL

    error   shift, and go to state 27
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    CHAR      reduce using rule 21 (DefList)
    INT       reduce using rule 21 (DefList)
    FLOAT     reduce using rule 21 (DefList)
    ID        reduce using rule 21 (DefList)
    STRING    reduce using rule 21 (DefList)
    RELOP     reduce using rule 21 (DefList)
    RETURN    reduce using rule 21 (DefList)
    BREAK     reduce using rule 21 (DefList)
    CONTINUE  reduce using rule 21 (DefList)
    IF        reduce using rule 21 (DefList)
    SWITCH    reduce using rule 21 (DefList)
    WHILE     reduce using rule 21 (DefList)
    FOR       reduce using rule 21 (DefList)
    SEMI      reduce using rule 21 (DefList)
    LS        reduce using rule 21 (DefList)
    LM        reduce using rule 21 (DefList)
    LL        reduce using rule 21 (DefList)
    RL        reduce using rule 21 (DefList)
    ASSIGNOP  reduce using rule 21 (DefList)
    ADD       reduce using rule 21 (DefList)
    SUB       reduce using rule 21 (DefList)
    MUL       reduce using rule 21 (DefList)
    DIV       reduce using rule 21 (DefList)
    MOD       reduce using rule 21 (DefList)
    OR        reduce using rule 21 (DefList)
    AND       reduce using rule 21 (DefList)
    NOT       reduce using rule 21 (DefList)
    DOT       reduce using rule 21 (DefList)
    SELFADD   reduce using rule 21 (DefList)
    SELFSUB   reduce using rule 21 (DefList)

    Specifier   go to state 28
    DefList     go to state 39
    Def         go to state 30
    StructDecl  go to state 31


state 26

    5 Decl: Specifier FuncDecl CompStmt .

    $default  reduce using rule 5 (Decl)


state 27

   23 DefList: error . SEMI

    SEMI  shift, and go to state 40


state 28

   24 Def: Specifier . DecList SEMI

    ID  shift, and go to state 37

    VarDecl  go to state 41
    DecList  go to state 42
    Dec      go to state 43


state 29

   90 StructDecl: STRUCT StructName LL DefList . RL

    RL  shift, and go to state 44


state 30

   22 DefList: Def . DefList

    error   shift, and go to state 27
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    CHAR      reduce using rule 21 (DefList)
    INT       reduce using rule 21 (DefList)
    FLOAT     reduce using rule 21 (DefList)
    ID        reduce using rule 21 (DefList)
    STRING    reduce using rule 21 (DefList)
    RELOP     reduce using rule 21 (DefList)
    RETURN    reduce using rule 21 (DefList)
    BREAK     reduce using rule 21 (DefList)
    CONTINUE  reduce using rule 21 (DefList)
    IF        reduce using rule 21 (DefList)
    SWITCH    reduce using rule 21 (DefList)
    WHILE     reduce using rule 21 (DefList)
    FOR       reduce using rule 21 (DefList)
    SEMI      reduce using rule 21 (DefList)
    LS        reduce using rule 21 (DefList)
    LM        reduce using rule 21 (DefList)
    LL        reduce using rule 21 (DefList)
    RL        reduce using rule 21 (DefList)
    ASSIGNOP  reduce using rule 21 (DefList)
    ADD       reduce using rule 21 (DefList)
    SUB       reduce using rule 21 (DefList)
    MUL       reduce using rule 21 (DefList)
    DIV       reduce using rule 21 (DefList)
    MOD       reduce using rule 21 (DefList)
    OR        reduce using rule 21 (DefList)
    AND       reduce using rule 21 (DefList)
    NOT       reduce using rule 21 (DefList)
    DOT       reduce using rule 21 (DefList)
    SELFADD   reduce using rule 21 (DefList)
    SELFSUB   reduce using rule 21 (DefList)

    Specifier   go to state 28
    DefList     go to state 45
    Def         go to state 30
    StructDecl  go to state 31


state 31

   25 Def: StructDecl . SEMI

    SEMI  shift, and go to state 46


state 32

   16 FuncDecl: ID LS RS .

    $default  reduce using rule 16 (FuncDecl)


state 33

   19 ParaDecl: Specifier . VarDecl

    ID  shift, and go to state 37

    VarDecl  go to state 47


state 34

   15 FuncDecl: ID LS VarList . RS

    RS  shift, and go to state 48


state 35

   17 VarList: ParaDecl .
   18        | ParaDecl . COMMA VarList

    COMMA  shift, and go to state 49

    $default  reduce using rule 17 (VarList)


state 36

   13 ArrayList: LM INT . RM
   14          | LM INT . RM ArrayList

    RM  shift, and go to state 50


state 37

   11 VarDecl: ID .
   12        | ID . ArrayList

    LM  shift, and go to state 21

    $default  reduce using rule 11 (VarDecl)

    ArrayList  go to state 22


state 38

   10 ExtDecList: VarDecl COMMA ExtDecList .

    $default  reduce using rule 10 (ExtDecList)


state 39

   20 CompStmt: LL DefList . StmtList RL

    CHAR      shift, and go to state 51
    INT       shift, and go to state 52
    FLOAT     shift, and go to state 53
    ID        shift, and go to state 54
    STRING    shift, and go to state 55
    RETURN    shift, and go to state 56
    BREAK     shift, and go to state 57
    CONTINUE  shift, and go to state 58
    IF        shift, and go to state 59
    SWITCH    shift, and go to state 60
    WHILE     shift, and go to state 61
    FOR       shift, and go to state 62
    LS        shift, and go to state 63
    LM        shift, and go to state 64
    LL        shift, and go to state 25
    SUB       shift, and go to state 65
    NOT       shift, and go to state 66
    SELFADD   shift, and go to state 67
    SELFSUB   shift, and go to state 68

    RL        reduce using rule 30 (StmtList)
    SUB       [reduce using rule 61 (Exp)]
    SELFADD   [reduce using rule 61 (Exp)]
    SELFSUB   [reduce using rule 61 (Exp)]
    $default  reduce using rule 61 (Exp)

    CompStmt  go to state 69
    StmtList  go to state 70
    Stmt      go to state 71
    Exp       go to state 72


state 40

   23 DefList: error SEMI .

    $default  reduce using rule 23 (DefList)


state 41

   28 Dec: VarDecl .
   29    | VarDecl . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 73

    $default  reduce using rule 28 (Dec)


state 42

   24 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 74


state 43

   26 DecList: Dec .
   27        | Dec . COMMA DecList

    COMMA  shift, and go to state 75

    $default  reduce using rule 26 (DecList)


state 44

   90 StructDecl: STRUCT StructName LL DefList RL .

    $default  reduce using rule 90 (StructDecl)


state 45

   22 DefList: Def DefList .

    $default  reduce using rule 22 (DefList)


state 46

   25 Def: StructDecl SEMI .

    $default  reduce using rule 25 (Def)


state 47

   19 ParaDecl: Specifier VarDecl .

    $default  reduce using rule 19 (ParaDecl)


state 48

   15 FuncDecl: ID LS VarList RS .

    $default  reduce using rule 15 (FuncDecl)


state 49

   18 VarList: ParaDecl COMMA . VarList

    TYPE  shift, and go to state 2

    Specifier  go to state 33
    VarList    go to state 76
    ParaDecl   go to state 35


state 50
